<resources>
    <string name="app_name">MyPT Connect</string>
    <string name="skip_to_home">Skip to home</string>
    <string name="let_your_fitness_journey_begin">Let your fitness\njourney begin</string>
    <string name="share_your_details_to_create_your_account_get_started">Share your details to create your account \n  &amp; get started.</string>
    <string name="cont_inue">Continue</string>
    <string name="or">OR</string>
    <string name="help">Help</string>
    <string name="verify_your_mobile_number">Verify your mobile number</string>
    <string name="verify_your_Email_id">Verify your Email ID</string>
    <string name="didn_t_receive_otp">Didn’t receive OTP?</string>
    <string name="resend_otp_in">Resend OTP in</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="Seconds">Seconds</string>
    <string name="welcome_to_mypt">WELCOME TO MYPT</string>
    <string name="full_name">Full name</string>
    <string name="skip">Skip</string>
    <string name="what_should_we_call_you">What should we call you?</string>
    <string name="what_brings_you_here">What brings you here?</string>
    <string name="feel_free_to_load_up_on_as_many_options_as_apply">Feel free to load up on as many options as apply</string>
    <string name="which_gender_do_you_n_identify_as">Which gender do you \n identify as?</string>
    <string name="what_are_your_goals">What are your goals?</string>
    <string name="how_do_you_prefer_n_working_out">How do you prefer\n working out?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="others">Others</string>
    <string name="what_is_your_height">What is your height?</string>
    <string name="feet">feet</string>
    <string name="cms">cms</string>
    <string name="what_is_your_weight">What is your weight?</string>
    <string name="kg">kg</string>
    <string name="lbs">lbs</string>
    <string name="what_s_your_location">What’s your location?</string>
    <string name="gpsisenabled">Please ensure gps is enabled with high accuracy</string>
    <string name="EnableGPS">Enable GPS</string>
    <string name="LocationPermission">Location Permission</string>
    <string name="grantlocationpermission">Go to Settings and Grant the location permission</string>
    <string name="search_for_area_street_name">Search for your building, street name...</string>
    <string name="gear_up_for_a_whole_new_fitness_journey">Gear up for a whole new fitness journey</string>
    <string name="you_are_all_set">You are all set!</string>
    <string name="almost_done">Almost Done</string>
    <string name="before_we_get_started_on_your_fitness_journey_help_us_get_to_know_you_better">Before we get started on your fitness journey, help us get to know you better</string>
    <string name="home">Home</string>
    <string name="bookings">Bookings</string>
    <string name="library">Library</string>
    <string name="calendar">Calendar</string>
    <string name="more">More</string>
    <string name="choose_location">Choose Location</string>
    <string name="good_morning">Good Morning</string>
    <string name="transformation_stories">Transformation Stories</string>
    <string name="before">Before</string>
    <string name="after">After</string>
    <string name="upcoming_classes_near_you">Upcoming Classes Near You</string>
    <string name="shop_products">Shop Products</string>
    <string name="mypt_gyms_nearby">MyPT Gyms Nearby</string>
    <string name="my_upcoming_sessions">My Upcoming Sessions</string>
    <string name="training_session_details">Training Session Details</string>
    <string name="my_upcoming_meals">My Upcoming Meals</string>
    <string name="my_activity">My Activity</string>
    <string name="my_workouts">My Workouts</string>
    <string name="completed">Completed</string>
    <string name="where_would_you_like_to_train">Where do you prefer to train?</string>
    <string name="trainers">Trainers</string>
    <string name="hurry_up">Hurry Up!</string>
    <string name="book_slot">BOOK SLOT</string>
    <string name="follow">FOLLOW</string>
    <string name="followers">Followers</string>
    <string name="about_me">About Me</string>
    <string name="review">Review</string>
    <string name="why_train_with_me">Why Train With Me</string>
    <string name="media_gallery">Media Gallery</string>
    <string name="average_rating">Average Rating</string>
    <string name="average_rating1">Average\nRating</string>
    <string name="years_of_experience">Years of Experience</string>
    <string name="clients_coached">Clients Coached</string>
    <string name="clients_coached1">Clients Coached</string>
    <string name="specialities">Specialities</string>
    <string name="certifications">Trainer Certifications</string>
    <string name="personal_training">Personal Training</string>
    <string name="personal_motivation_quote">Personal Motivation Quote</string>
    <string name="book_a_slot">Book a Slot</string>
    <string name="available">Available</string>
    <string name="fast_filling">Fast Filling</string>
    <string name="fully_booked">Fully Booked</string>
    <string name="closed">Closed</string>
    <string name="select_time_of_the_day">Select time of the day</string>
    <string name="night">Night</string>
    <string name="morning">Morning</string>
    <string name="create_a_package_and_save_50">Create a Package and save 50%</string>
    <string name="view_breakdown">View Breakdown</string>
    <string name="make_payment">Make Payment</string>
    <string name="booking_confirmed">Booking Confirmed</string>
    <string name="you_have_received_a_confirmation_email">You have received a confirmation email.</string>
    <string name="pack_age">Package</string>
    <string name="start_date">Start Date</string>
    <string name="valid_upto">Valid Upto</string>
    <string name="trainer_details">Trainer Details</string>
    <string name="location">Location</string>
    <string name="timing">Timing</string>
    <string name="get_direction">Get Direction</string>
    <string name="scan_the_qr_code_to_access_the_gym_premises">Scan the QR code to access the gym premises.</string>
    <string name="back_to_home">Back to home</string>
    <string name="how_do_you_prefer_working_out">How would you like\nto train?</string>
    <string name="OneonOne">One on One\n</string>
    <string name="WithBuddy">With Buddy</string>
    <string name="WithGroup">With Group\n</string>
    <string name="choose_total_sessions">Choose total \n sessions</string>
    <string name="per_session_cost">Per Session Cost</string>
    <string name="total_cost">Total Cost</string>
    <string name="increase_session_count_for_lower_per_session_cost">Increase session count for lower per session cost</string>
    <string name="not_sure_what_you_want_consult_an_expert">Not sure what you want? Consult an expert</string>
    <string name="the_validity_of_the_package_also_determines_the_access_period_for_mypt_gym">The validity of the package also determines the access period for the trainer</string>
    <string name="the_validity_of_the_package_also_determines_the_access_period_for_mypt_gym_">The validity of the package also determines the access period for MyPT gym</string>
    <string name="mark_your_journey">Mark your \n journey</string>
    <string name="starts">Starts</string>
    <string name="ends">Ends</string>
    <string name="review_package">Review your training plan</string>
    <string name="training_preference">Training Preference</string>
    <string name="one_on_one">One on One</string>
    <string name="booking_slot">Booking Slot</string>
    <string name="view_coupons_amp_offers"><![CDATA[View Coupons & Offers]]></string>
    <string name="package_details">Package Details</string>
    <string name="total_sessions">Total Sessions</string>
    <string name="coupons_offers"><![CDATA[Coupons & Offers]]></string>
    <string name="check">Check</string>
    <string name="enter_coupon_code">Enter coupon code</string>
    <string name="validity_of_the_npackage">Validity of the\npackage?</string>
    <string name="apply">Apply</string>
    <string name="maximum_savings">Maximum Savings</string>
    <string name="view_details">View Details</string>
    <string name="gym_trainers">Gym Trainers</string>
    <string name="home_trainers">Home Trainers</string>
    <string name="top_packages">Top Packages</string>
    <string name="end_date">End Date</string>
    <string name="membership_validity">Membership validity</string>
    <string name="gym_features">Gym Features</string>
    <string name="equipment">Equipment</string>
    <string name="located_right_opposite_the_marina_metro_this_gym_is_perfect_for_medium_to_heavy_workouts_with_a_read_more">Located right opposite the marina metro, this gym is perfect for medium to heavy workouts with a ... Read More</string>
    <string name="what_this_gym_offers">What this gym offers</string>
    <string name="cafe">Cafe</string>
    <string name="equipment_inside_the_gym">Equipment inside the gym</string>
    <string name="gym_timings">Gym Timings</string>
    <string name="location_of_the_gym">Location of the gym</string>
    <string name="booking_listings">Booking Listings</string>
    <string name="workout_focus">Type</string>
    <string name="session_type">Session Type</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="training_location">Training Location</string>
    <string name="my_trainer">My Trainer</string>
    <string name="upcoming">Upcoming</string>
    <string name="cancelled">Cancelled</string>
    <string name="months">Months</string>
    <string name="month">Month</string>
    <string name="filter">Filter</string>
    <string name="trainer_has_rescheduled_this_session">Trainer has rescheduled this session</string>
    <string name="duration">Duration</string>
    <string name="select_month">Select Month</string>
    <string name="type">Type</string>
    <string name="trainer_session">Trainer Session</string>
    <string name="booking_details">Booking Details</string>
    <string name="session_overview">Session Overview</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="rate_trainer">Rate Trainer</string>
    <string name="workout_summary">Workout Summary</string>
    <string name="exercise_log">Exercise Log</string>
    <string name="gym_session">Gym Session</string>
    <string name="status">Status</string>
    <string name="all">All</string>
    <string name="clear">clear</string>
    <string name="ok">Ok</string>
    <string name="cancellation_policy">Cancellation Policy</string>
    <string name="time">Time</string>
    <string name="more_than_12_hrs_before_the_service">More than 12 hrs before the \nservice</string>
    <string name="free">Free</string>
    <string name="within_12_hrs_of_the_service">Within 12 hrs of the service</string>
    <string name="_100_cancellation_charges">100% Cancellation Charges</string>
    <string name="the_fee_goes_to_the_trainers">The fee goes to the trainers</string>
    <string name="their_time_is_reserved_for_the_service_and_they_cannot_get_another_booking_for_the_reserved_time">Their time is reserved for the service and they cannot get another booking for the reserved time</string>
    <string name="okay">okay</string>
    <string name="done">done</string>
    <string name="sort_by">Sort By</string>
    <string name="price_highest_first">Price (Highest First)</string>
    <string name="price_lowest_first">Price (Lowest First)</string>
    <string name="discount">Discount</string>
    <string name="ratings">Ratings</string>
    <string name="mypt_studio">MyPT Studio</string>
    <string name="change_photo_upload">Change Photo/Upload</string>
    <string name="remove">Remove</string>
    <string name="view_photo">View Photo</string>
</resources>