<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/top_rounded_corners">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:layout_marginHorizontal="15dp"
        android:id="@+id/standard_bottom_sheet"
        >
        <androidx.cardview.widget.CardView
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="70dp"
            app:cardCornerRadius="3dp"
            android:layout_height="5dp"
            app:cardBackgroundColor="@color/rulersmallline"/>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/headingcolor"
            android:textSize="18sp"
            android:paddingVertical="15dp"
            android:textStyle="bold"
            android:fontFamily="@font/manrope_medium"
            android:text="@string/filter"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/smallTextcolor"
            android:textSize="14sp"
            android:paddingVertical="15dp"
            android:textStyle="bold"
            android:fontFamily="@font/manrope_medium"
            android:text="@string/type"
            />

        <CheckBox
            android:paddingHorizontal="5dp"
            android:id="@+id/trainerSession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:buttonTint="@color/white"
            style="@style/CustomCheckboxBrand"
            android:fontFamily="@font/manrope_medium"
            android:textColor="@color/white"
            android:text="@string/trainer_session" />
        <CheckBox
            android:layout_marginTop="-10dp"
            android:paddingHorizontal="5dp"
            android:id="@+id/gymSession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:buttonTint="@color/white"
            style="@style/CustomCheckboxBrand"
            android:fontFamily="@font/manrope_medium"
            android:textColor="@color/white"
            android:text="@string/gym_session" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/smallTextcolor"
            android:textSize="14sp"
            android:paddingVertical="15dp"
            android:textStyle="bold"
            android:fontFamily="@font/manrope_medium"
            android:text="@string/location"
            />

        <CheckBox
            android:paddingHorizontal="5dp"
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:buttonTint="@color/white"
            style="@style/CustomCheckboxBrand"
            android:fontFamily="@font/manrope_medium"
            android:textColor="@color/white"
            android:text="@string/home" />
        <CheckBox
            android:layout_marginTop="-10dp"
            android:paddingHorizontal="5dp"
            android:id="@+id/myPt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:buttonTint="@color/white"
            style="@style/CustomCheckboxBrand"
            android:fontFamily="@font/manrope_medium"
            android:textColor="@color/white"
            android:text="@string/mypt_studio" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/smallTextcolor"
            android:textSize="14sp"
            android:visibility="gone"
            android:paddingVertical="15dp"
            android:textStyle="bold"
            android:fontFamily="@font/manrope_medium"
            android:text="@string/status"
            />

        <CheckBox
            android:paddingHorizontal="5dp"
            android:id="@+id/all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:visibility="gone"
            android:buttonTint="@color/white"
            style="@style/CustomCheckboxBrand"
            android:fontFamily="@font/manrope_medium"
            android:textColor="@color/white"
            android:text="@string/all" />
        <CheckBox
            android:layout_marginTop="-10dp"
            android:paddingHorizontal="5dp"
            android:visibility="gone"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:buttonTint="@color/white"
            style="@style/CustomCheckboxBrand"
            android:fontFamily="@font/manrope_medium"
            android:textColor="@color/white"
            android:text="@string/upcoming" />
        <CheckBox
            android:layout_marginTop="-10dp"
            android:paddingHorizontal="5dp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:buttonTint="@color/white"
            style="@style/CustomCheckboxBrand"
            android:fontFamily="@font/manrope_medium"
            android:textColor="@color/white"
            android:text="@string/completed" />
        <CheckBox
            android:layout_marginTop="-10dp"
            android:paddingHorizontal="5dp"
            android:visibility="gone"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:buttonTint="@color/white"
            style="@style/CustomCheckboxBrand"
            android:fontFamily="@font/manrope_medium"
            android:textColor="@color/white"
            android:text="@string/cancelled" />

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/tvclear"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="20dp"
                android:background="@drawable/view_detail_rectangle"
                android:gravity="center"
                android:fontFamily="@font/manrope_medium"
                android:paddingVertical="15dp"
                android:textFontWeight="700"
                android:textAllCaps="true"
                android:text="@string/clear"
                android:textStyle="bold"
                android:textColor="@color/headingcolor"
                android:textSize="16dp" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/tvApply"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="20dp"
                android:background="@drawable/apply_rectangle"
                android:gravity="center"
                android:fontFamily="@font/manrope_medium"
                android:paddingVertical="15dp"
                android:textFontWeight="700"
                android:textAllCaps="true"
                android:text="@string/apply"
                android:textStyle="bold"
                android:textColor="@color/buttontextcolor"
                android:textSize="16dp" />
        </LinearLayout>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>