<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/left_right_corner"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="70dp"
            app:cardCornerRadius="3dp"
            android:layout_height="5dp"
            app:cardBackgroundColor="@color/rulersmallline"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">
            <TextView
                android:layout_marginEnd="10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/headingcolor"
                android:textSize="18sp"
                android:padding="15dp"
                android:textStyle="bold"
                android:fontFamily="@font/manrope_medium"
                android:text="@string/cancellation_policy"
                />
            <ImageView
                android:id="@+id/close"
                android:layout_width="30dp"
                android:layout_gravity="center"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/close"/>

        </LinearLayout>
        <TextView
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/smallTextcolor"
            android:textSize="14sp"
            android:padding="15dp"
            android:textStyle="bold"
            android:fontFamily="@font/manrope_medium"
            android:text="@string/time"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">
            <TextView
                android:layout_marginEnd="10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/headingcolor"
                android:textSize="14sp"
                android:padding="15dp"
                android:textStyle="bold"
                android:id="@+id/freeMsg"
                android:fontFamily="@font/manrope_medium"
                android:text="@string/more_than_12_hrs_before_the_service"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:id="@+id/freeTextMsg"
                android:textColor="@color/available"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/manrope_medium"
                android:text="@string/free"
                />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginBottom="15dp"
            android:layerType="software"
            android:background="@drawable/light_dotted_line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">
            <TextView
                android:id="@+id/cancellationMsg"
                android:layout_marginEnd="10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/headingcolor"
                android:textSize="14sp"
                android:padding="15dp"
                android:textStyle="bold"
                android:fontFamily="@font/manrope_medium"
                android:text="@string/within_12_hrs_of_the_service"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="#F43E33"
                android:layout_marginEnd="10dp"
                android:id="@+id/cancelTextMsg"
                android:fontFamily="@font/manrope_medium"
                android:text="@string/_100_cancellation_charges"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/reschedule_rectangle"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/manrope_medium"
                android:paddingVertical="5dp"
                android:paddingHorizontal="10dp"
                android:textFontWeight="700"
                android:text="@string/the_fee_goes_to_the_trainers"
                android:textStyle="bold"
                android:textColor="@color/headingcolor"
                android:textSize="18sp" />
             <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/manrope_medium"
                android:paddingVertical="5dp"
                 android:layout_marginBottom="25dp"
                android:paddingHorizontal="10dp"
                android:textFontWeight="700"
                android:text="@string/their_time_is_reserved_for_the_service_and_they_cannot_get_another_booking_for_the_reserved_time"
                android:textStyle="bold"
                android:textColor="#FCE3C6"
                android:textSize="14sp" />

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"

            android:id="@+id/tvOk"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/view_detail_rectangle"
            android:gravity="center"
            android:fontFamily="@font/manrope_medium"
            android:paddingVertical="12dp"
            android:textFontWeight="700"
            android:textAllCaps="true"
            android:text="@string/okay"
            android:textStyle="bold"
            android:textColor="@color/headingcolor"
            android:textSize="16dp" />
    </LinearLayout>
</RelativeLayout>