<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/top_rounded_corners"

    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="70dp"
            app:cardCornerRadius="3dp"
            android:layout_height="5dp"
            app:cardBackgroundColor="@color/rulersmallline"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="15dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:id="@+id/tvChangePhoto"
            android:textStyle="bold"
            android:fontFamily="@font/manrope_medium"
            android:text="@string/change_photo_upload" />
        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="15dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:id="@+id/tvRemove"
            android:textStyle="bold"
            android:fontFamily="@font/manrope_medium"
            android:text="@string/remove" />
        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="40dp"
            android:layout_marginHorizontal="15dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:id="@+id/tvViewPhoto"
            android:textStyle="bold"
            android:fontFamily="@font/manrope_medium"
            android:text="@string/view_photo" />



    </LinearLayout>

</RelativeLayout>